--- a/source/style.scss
+++ b/source/style.scss
@@ -1,4 +1,4 @@
-@import 'normalize-css/normalize.css';
+@import 'normalize-css/normalize.scss';
 @import 'styles/base/variables';
 @import 'styles/base';
 @import 'styles/components/map';
