Changed state structure to reflect multiple regions being configured. Now fixing tests

--- a/source/styles/base/variables.scss
+++ b/source/styles/base/variables.scss
@@ -4,7 +4,7 @@
     --red: tomato;
     --yellow: wheat;
     --black: #4D4E53; /* charcoal gray */
-    --rescape-love: white;
+    --rescape-love: pink;
 
     --fadeblue: color(deepskyblue saturation(30%));
     --lightblue: color(deepskyblue lightness(80%));
